--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "language-casetalk",
   "version": "0.0.1",
   "author": "Roy Maassen <roy.maassen@deltiq.com>",
-  "description": "A language description for CaseTalk expression files.",
+  "description": "Syntax highlighting for CaseTalk expression files.",
   "keywords": [
     "grammar",
     "casetalk"
