--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "language-casetalk",
   "version": "0.3.0",
   "author": "Roy Maassen <roy.maassen@deltiq.com>",
-  "description": "Syntax highlighting for CaseTalk expression files. CaseTalk is a product from BCP Software. See https://casetalk.com for more information.
-  ",
+  "description": "Syntax highlighting for CaseTalk expression files. CaseTalk is a product from BCP Software. See https://casetalk.com for more information.",
   "keywords": [
     "grammar",
     "casetalk"
